--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,11 @@ langchain-community
 pytesseract
 pillow
 geopy
+streamlit
+nltk
+transformers
+torch
+openai
+langchain-core
 reportlab
+rouge-score
